# Nightwing

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
nightwing/: asgi.py  settings.py  urls.py  wsgi.py
nightwing/apps/auth/: apps.py  forms.py  urls.py  views.py
nightwing/apps/dashboard/: apps.py  urls.py  views.py
nightwing/apps/quiz/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
nightwing/apps/quiz/migrations/: 0001_initial.py  0002_multiplechoicequestion.py  0003_multiplechoicequestion_correct_option_and_more.py  0003_quiz_join_code.py  0004_merge_20240830_1641.py  0005_quiz_started.py  0006_multiplechoicequestion_question_number_and_more.py  0007_quiz_participants.py  0008_quiz_finished.py  0009_quiz_owner.py  0010_alter_quiz_owner.py  0011_alter_quiz_current_question.py  0012_remove_quiz_finished.py  0013_multiplechoicequestion_credits.py
nightwing/apps/store/: admin.py  apps.py  models.py  urls.py  views.py
nightwing/apps/store/migrations/: 0001_initial.py  0002_credit.py
nightwing/settings/: __init__.py
nightwing/static/css/: custom.css
nightwing/templates/: base.html
nightwing/templates/dashboard/: index.html
nightwing/templates/quiz/: copy-code.html  create_question.html  create_quiz.html  finish_quiz.html  list_quizzes.html  question.html  question_results.html  start_quiz.html  view_quiz.html
nightwing/templates/store/: store.html
user/: main.py
